  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,
   review by Nicolás Ojeda Bär)

### Build system:

- #12198: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #12255, #12256: Handle large signal numbers correctly (Nick Barnes,
   review by David Allsopp).

OCaml 5.1.0
---------------

### Language features:

- #9975, #11365: Make empty types (`type t = |`) immediate.
  (Antal Spector-Zabusky, review by Gabriel Scherer)

* #11694: Add short syntax for generative functor types `() -> ...`
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär,
  Jacques Garrigue)

- #11457: Remove old polymorphic variant syntax.
  With ``type t = [ `A | `B ]``, one could use the syntax `#t` in types,
  where it means the same thing as `[< t]`, and in patterns, where it means
  ``(`A | `B)``. The use of `#t` in types for polymorphic variants
  was deprecated since 2001, and is now removed. The syntax remains available
  in patterns, or for objects -- when `t` is a class type.
  (Stefan Muenzel, review by Gabriel Scherer and Jacques Garrigue)

- #11984: Add dedicated syntax for generative functor application.
  Previously, OCaml did not disinguish between `F ()` and
  `F (struct end)`, even though the latter looks applicative. Instead,
  the decision between generative and applicative functor application
  was made based on the type of `F`. With this patch, we now distinguish
  these two application forms; writing `F (struct end)` for a generative
  functor leads to new warning 73.
  (Frederic Bour and Richard Eisenberg, review by Florian Angeletti)

### Runtime system:

- #11589, #11903: Modify the GC pacing code to make sure the GC keeps
   up with allocations in the presence of idle domains.
   (Damien Doligez and Stephen Dolan, report by Florian Angeletti,