@@ -193,11 +193,17 @@ Error: This recursive type is not regular.
 |}]
 
 type 'a t = 'a * 'b constraint _ * 'a = 'b t;;
+[%%expect{|
+Line 1, characters 0-44:
+1 | type 'a t = 'a * 'b constraint _ * 'a = 'b t;;
+    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Error: A type variable is unbound in this type declaration.
+       In type 'a * 'b the variable 'b is unbound
+|}]
 type 'a t = 'a * 'b constraint 'a = 'b t;;
 [%%expect{|
-type 'b t = 'b * 'b
-Line 2, characters 0-40:
-2 | type 'a t = 'a * 'b constraint 'a = 'b t;;
+Line 1, characters 0-40:
+1 | type 'a t = 'a * 'b constraint 'a = 'b t;;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Error: The type abbreviation t is cyclic:
          'a t t = 'a t * 'a,
@@ -394,4 +400,36 @@ let test_obj_with_expansion :
 val test_obj_with_expansion :
   'a tag -> ('b, < bar : bar -> 'b; foo : foo -> 'b; .. >) obj -> 'a -> 'b =
   <fun>
+|}]
+
+
+(* PR#12145 -- Loopy constraints cause ocamlc to loop *)
+
+type 'a t constraint 'a = 'b * 'c
+type cycle = cycle id
+and 'a id = 'a
+and s = cycle t
+[%%expect{|
+type 'a t constraint 'a = 'b * 'c
+Line 2, characters 0-21:
+2 | type cycle = cycle id
+    ^^^^^^^^^^^^^^^^^^^^^
+Error: The type abbreviation cycle is cyclic:
+         cycle = cycle id,
+         cycle id = cycle
+|}]
+
+(* Vanishing constraints may be discarded during the translation *)
+type 'a t = [`Foo]
+type 'a cstr constraint 'a = float
+[%%expect{|
+type 'a t = [ `Foo ]
+type 'a cstr constraint 'a = float
+|}]
+
+type s = int
+and r = [s cstr t | `Bar]
+[%%expect{|
+type s = int
+and r = [ `Bar | `Foo ]
 |}]
